cmake_minimum_required(VERSION 2.6)

project(ARBORISVIEWER)
SET(CMAKE_MODULE_PATH "${ARBORISVIEWER_SOURCE_DIR}/cmake")
FIND_PACKAGE(CppUnit)
FIND_PACKAGE(Boost COMPONENTS program_options)
ENABLE_TESTING()

set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${ARBORISVIEWER_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${ARBORISVIEWER_BINARY_DIR}/lib)

add_subdirectory(src)
